--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,15 @@
   padding: 25px 15px;
   margin-bottom: 45px;
 }
+
+.assignment-container{
+  border-radius: 5px;
+  margin: 20px;
+  position: relative;
+  opacity:0.6;
+  background: #fbfbfb;
+  text-align: center;
+  border: 1px solid silver;
+  padding: 25px 15px;
+  margin-bottom: 45px;
+}
