display the new added assignment without having to refresh the page

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
   margin-bottom: 45px;
 }
 
-.assignments-containers{
+.assignment-form{
   border-radius: 5px;
   font-family: georgia;
   margin: 20px;
