--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
+body{
+  font-family: Georgia;
+}
 .course-container{
   border-radius: 5px;
   margin: 20px;
-  font-family: georgia;
   position: relative;
   background: #fbfbfb;
   text-align: center;
@@ -12,8 +14,7 @@
 
 .assignment-container{
   border-radius: 5px;
-  font-family: georgia;
-  margin: 20px;
+  /* margin: 20px; */
   position: relative;
   background: #fbfbfb;
   text-align: center;
@@ -24,7 +25,6 @@
 
 .assignment-form{
   border-radius: 5px;
-  font-family: georgia;
   margin: 20px;
   position: relative;
   background: #fbfbfb;
@@ -39,4 +39,12 @@
   border: 1px solid black;
   padding: 5px 5px;
 
+}
+
+.assignments-containers{
+  padding: 25px 20px;
+}
+
+button{
+  margin: 20px;
 }
