--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,25 @@
 body{
   font-family: Georgia;
 }
+#container{
+  margin: 10px 10px;
+}
 .course-container{
   background-color:  #e6f7ff;
-  border-radius: 5px;
-  margin: 20px;
+  border-radius: 10px;
   position: relative;
-  /* background: #fbfbfb; */
   text-align: center;
-  border: 1px solid silver;
+  border: 1px solid black;
   padding: 25px 15px;
   margin-bottom: 45px;
 }
 
 .assignment-container{
-  border-radius: 5px;
+  border-radius: 10px;
   /* margin: 20px; */
   position: relative;
   text-align: center;
-  border: 1px solid silver;
+  border: 1px solid #ffa94d;
   padding: 25px 15px;
   margin-bottom: 45px;
   background-color: #fff3e6;
@@ -52,5 +53,4 @@ button{
 
 .card-header{
   background-color: #ffa94d;
-  border-radius: 500px;
 }
