--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 body{
-  font-family: Georgia;
+  font-family: PT Serif Ibarra Real Nova georgia;
 }
 #container{
   margin: 10px 10px;
 }
 .course-container{
-  background-color:  #e6f7ff;
+  background-color:  #a3a3c2;
   border-radius: 10px;
   position: relative;
   text-align: center;
@@ -18,7 +18,7 @@ body{
   border-radius: 10px;
   /* margin: 20px; */
   position: relative;
-  text-align: center;
+  /* text-align: center; */
   border: 1px solid #ffa94d;
   padding: 25px 15px;
   margin-bottom: 45px;
@@ -29,7 +29,7 @@ body{
   border-radius: 5px;
   margin: 20px;
   position: relative;
-  background: #fbfbfb;
+  background: #fff3e6;
   text-align: center;
   border: 1px solid silver;
   padding: 25px 15px;
@@ -53,4 +53,9 @@ button{
 
 .card-header{
   background-color: #ffa94d;
+
+}
+
+.name{
+  margin-top: 10px;
 }
