change the first promise of the createAssignments method to be able to save the response staus and use it in the if statment of the next promise

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,20 @@ body{
 #container{
   margin: 10px 10px;
 }
+
+.course-name{
+  font-size: 90px;
+  font-weight: bold;
+}
+
+td{
+  font-size: 25px;
+}
+
+.assignment-name{
+  font-size: 40px;
+  font-weight: bold;
+}
 .course-container{
   background-color:  #a3a3c2;
   border-radius: 10px;
